--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>Index page test</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="style/main.css">
+    </head>
+    <body>
+        
+        <header class="header">
+            <div class="logo">
+                <img src="images/logo.jpg">
+            </div>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="Pages/diary.html">Farm Diary</a></li>
+                    <li><a href="Pages/garlicTypes.html">Garlic Types</a></li>
+                    <li><a href="Pages/recipes.html">Suggested recipes</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="pageTitle">
+            <h1>Landscape Hill</h1>
+        </section>
+
+        <main class="content">
+            <p>Description of website</p>
+        </main>
+
+
+    </body>
+</html>
