--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style/main.css">
+        <link rel="stylesheet" href="Style/main.css">
     </head>
     <body>
         
