Basic layout for all pages with working navbar

--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
     </head>
     <body>
         
-        <header class="header">
-            <div class="logo">
+        <div id="navbar" class="redbox">
+            <div id="logo" class="redbox">
                 <img src="images/logo.jpg">
             </div>
-            <nav class="navbar">
+            <nav id="links" class="redbox">
                 <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="Pages/diary.html">Farm Diary</a></li>
-                    <li><a href="Pages/garlicTypes.html">Garlic Types</a></li>
+                    <li><a href="Pages/types.html">Garlic Types</a></li>
                     <li><a href="Pages/recipes.html">Suggested recipes</a></li>
                 </ul>
             </nav>
-        </header>
-        <section class="pageTitle">
-            <h1>Landscape Hill</h1>
-        </section>
+        </div>
+        
+        <div id="main" class="redbox">
 
-        <main class="content">
-            <p>Description of website</p>
-        </main>
+            <div id="title" class="redbox">
+                <h1>Landscape Hill</h1>
+            </div>
+
+            <div id="mainContent" class="redbox">
+                <p>Description of website</p>
+            </div>
+
+        </div>
 
 
     </body>
