--- a/Pages/types.html
+++ b/Pages/types.html
@@ -13,8 +13,8 @@
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="diary.html">Farm Diary</a></li>
-                    <li><a href="types.html">Garlic Types</a></li>
-                    <li><a href="recipes.html" class="active">Suggested recipes</a></li>
+                    <li><a href="types.html" class="active">Garlic Types</a></li>
+                    <li><a href="recipes.html">Suggested recipes</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,11 +22,11 @@
         <div id="main" class="redbox">
 
             <div id="title" class="redbox">
-                <h1>Garlic based recipes we recommend</h1>
+                <h1>Garlic Types</h1>
             </div>
 
             <div id="mainContent" class="redbox">
-                <p>Recipes and photos here</p>
+                <p>Photos and desctiptions</p>
             </div>
 
         </div>
