Suggest recipes pages layout

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="Pages/diary.html">Farm Diary</a></li>
                     <li><a href="Pages/types.html">Garlic Types</a></li>
-                    <li><a href="Pages/recipes.html">Suggested recipes</a></li>
+                    <li><a href="Pages/recipes.html">Suggested Recipes</a></li>
                 </ul>
             </nav>
         </div>
+
+        <!-- Start of main website content -->
         
         <div id="main" class="redbox">
+
+            <div id="farmImage" class="bluebox">
+                insert image of farm here 
+            </div>
 
             <div id="title" class="redbox">
                 <h1>Landscape Hill</h1>
