--- a/Pages/types.html
+++ b/Pages/types.html
@@ -14,7 +14,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="diary.html">Farm Diary</a></li>
                     <li><a href="types.html" class="active">Garlic Types</a></li>
-                    <li><a href="recipes.html">Suggested recipes</a></li>
+                    <li><a href="recipes.html">Suggested Recipes</a></li>
                 </ul>
             </nav>
         </div>
