--- a/Pages/recipes.html
+++ b/Pages/recipes.html
@@ -69,8 +69,43 @@
 
                 <!-- Recipe block end -->
 
+                <div class="recipeBlock">
 
-                
+                    <div class="recipePhoto">
+                        <img src="../images/default.jpg">
+                    </div>
+
+                    <div class="recipeContent">
+                        <h2 class="recipeName">Name of recipe</h2>
+
+                        <p class="recipeDescription">
+                            Short description of the recipe goes here. This stays visible.
+                        </p>
+
+                        <button class="toggleRecipe">Show full recipe</button>
+
+                        <div class="recipeDetails">
+                            <h3>Ingredients</h3>
+                            <ul>
+                                <li>Ingredient 1</li>
+                                <li>Ingredient 2</li>
+                            </ul>
+
+                            <h3>Method</h3>
+                            <ol>
+                                <li>Step 1</li>
+                                <li>Step 2</li>
+                            </ol>
+
+                            <p class="recipeSource">
+                                <strong>Source:</strong> Website / Book name
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
 
