--- a/Pages/recipes.html
+++ b/Pages/recipes.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="../Style/main.css">
-        <link rel="stylesheet" href="../Style/recipe.css"
-    </head>
+        <link rel="stylesheet" href="../Style/recipe.css">
+    </head> 
     <body>
         
         <div id="navbar" class="redbox">
@@ -106,6 +106,7 @@
 
 
 
+                <!-- End of recipes here -->
             </div>
         </div>
 
