favicon and <head> info

--- a/Pages/diary.html
+++ b/Pages/diary.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Garlic Farm Diary</title>
+        <meta name="description" content="Follow our garlic farm diary as we document the development, updates, and ongoing progress of growing and selling Australian garlic .">
+        <link rel="icon" href="images/favicon.png">
+
         <link rel="stylesheet" href="../Style/main.css">
     </head>
     <body>
