--- a/Pages/recipes.html
+++ b/Pages/recipes.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Garlic Recipes</title>
+        <meta name="description" content="Discover our favorite garlic recipes, recommended and made by us. Explore cooking ideas that use our garlic.">
+        <link rel="icon" href="images/favicon.png">
+
         <link rel="stylesheet" href="../Style/main.css">
         <link rel="stylesheet" href="../Style/recipe.css">
     </head> 
