--- a/Pages/types.html
+++ b/Pages/types.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Garlic Varieties</title>
+        <meta name="description" content="Explore the garlic varieties we grow and sell, including flavour, characteristics, and typical head sizes.">
+        <link rel="icon" href="images/favicon.png">
+
         <link rel="stylesheet" href="../Style/main.css">
         <link rel="stylesheet" href="../Style/types.css">
     </head>
