--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Landscape Hill Garlic</title>
+        <meta name="description" content="Clear description of this page.">
+        <link rel="icon" href="images/favicon.png">
+
         <link rel="stylesheet" href="Style/main.css">
     </head>
     <body>
